--- a/ProyectoDSParteI+Dopazo.ipynb
+++ b/ProyectoDSParteI+Dopazo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyOeHwaMq/MWSSaVjb72idO+",
+      "authorship_tag": "ABX9TyNUcHtUBPtahxF9PNbBRQc/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,13 +57,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "En este proyecto trabajamos con el dataset Video_games.csv que contiene información sobre los videojuegos, sus ventas por region, el puntaje segun criticos y usuarios, los publicadores y los desarrolladores de estos mismos.\n",
+        "***En este proyecto trabajamos con el dataset Video_games.csv que contiene información sobre los videojuegos, sus ventas por region, el puntaje segun criticos y usuarios, los publicadores y los desarrolladores de estos mismos.***\n",
         "\n",
-        "El objetivo principal es aplicar técnicas de visualización y análisis exploratorio de datos para identificar patrones relevantes, relaciones entre variables y posibles anomalías o factores que influyen en los video juegos. A través de gráficos univariados, bivariados y multivariados, se buscará responder una serie de preguntas o hipótesis planteadas sobre el comportamiento de los datos.\n",
+        "***El objetivo principal es aplicar técnicas de visualización y análisis exploratorio de datos para identificar patrones relevantes, relaciones entre variables y posibles anomalías o factores que influyen en los video juegos. A través de gráficos univariados, bivariados y multivariados, se buscará responder una serie de preguntas o hipótesis planteadas sobre el comportamiento de los datos.***\n",
         "\n",
-        "El análisis incluye una limpieza previa de datos, identificación de valores perdidos, y selección de variables relevantes. Luego se desarrollan visualizaciones que permiten explorar tendencias, distribuciones y correlaciones. A partir de estos resultados visuales y numéricos se busca brindar una interpretación que permita entender mejor el fenómeno analizado.\n",
+        "***El análisis incluye una limpieza previa de datos, identificación de valores perdidos, y selección de variables relevantes. Luego se desarrollan visualizaciones que permiten explorar tendencias, distribuciones y correlaciones. A partir de estos resultados visuales y numéricos se busca brindar una interpretación que permita entender mejor el fenómeno analizado.***\n",
         "\n",
-        "El proyecto se estructura en etapas: definición de preguntas, diagnóstico visual, interpretación, y preparación para análisis posteriores como modelado o segmentación.\n",
+        "***El proyecto se estructura en etapas: definición de preguntas, diagnóstico visual, interpretación, y preparación para análisis posteriores como modelado o segmentación.***\n",
         "\n",
         "\n",
         "\n",
@@ -76,88 +76,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Preguntas de interes:**\n",
-        "\n",
-        "1 - Cual son los juegos con mejor puntaje segun la critica?,\n",
-        "\n",
-        "  - Cual es el desarrollador con mejor puntaje segun la critica?,\n",
-        "  \n",
-        "  - Cual es el publicador con mejor puntaje segun la critica?\n",
-        "\n",
-        "\n",
-        "\n",
-        "---\n",
-        "\n",
-        "\n",
-        "2 - Cual son los juegos con mejor puntaje segun los usuarios?,\n",
-        "\n",
-        "  - Cual es el desarrollador con mejor puntaje segun los usuarios?,\n",
-        "\n",
-        "  - Cual es el publicador con mejor puntaje segun los usuarios?\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "---\n",
-        "\n",
-        "\n",
-        "3 - Cual son los juegos con el mejor puntaje promedio(Critica y Usuarios)?\n",
-        "  \n",
-        " - Cual es el desarrollador con mejor puntaje promedio(Critica y Usuarios)?\n",
-        "  \n",
-        " - Cual es el publicador con mejor puntaje promedio(Critica y Usuarios)?\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "---\n",
-        "\n",
-        "\n",
-        "4 - Top 3 de los generos mas vendidos por region\n",
-        "  - Top 3 de los generos mas vendidos por consola\n",
-        "\n",
-        "\n",
-        "\n",
-        "---\n",
-        "\n",
-        "\n",
-        "5 - Cual es el Top 5 de los juegos mas vendidos por region?\n",
-        "\n",
-        "\n",
-        "---\n",
-        "\n",
-        "\n",
-        "6 - Como evolucionaron las ventas en cada region dentro del periodo 2000-2014?\n",
-        "\n",
-        "\n",
-        "---\n",
-        "\n",
-        "\n",
-        "\n",
-        "- Cual es el juego mejor genero en general (criticos y usuarios)\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "- Que tan cercano o lejano estan los generos mas populares y los que tienen mayor puntuacion promedio\n",
-        "\n",
-        "\n",
-        "---\n",
-        "\n",
-        "\n",
-        "- Para donde se dirige la tendencia del genero de juego, es decir que genero es mas probable que los usuarios elijan al momento de jugar\n",
-        "\n",
-        "\n"
+        "# **Preguntas de interes:**"
       ],
       "metadata": {
-        "id": "-2WPzFRN6TnA"
+        "id": "axHxfwj1KrxG"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# **Preguntas de interes:**\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -183,15 +111,6 @@
       "metadata": {
         "id": "bdfN864pr_gR"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "FZdW9a_IibmQ"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1985,12 +1904,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "KQjGye-9zctN",
-        "outputId": "0e9f25b5-718d-4068-8e8e-f03176485786",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 807
-        }
+        },
+        "id": "KQjGye-9zctN",
+        "outputId": "0e9f25b5-718d-4068-8e8e-f03176485786"
       },
       "execution_count": 8,
       "outputs": [
