--- a/ProyectoDSParteI+Dopazo.ipynb
+++ b/ProyectoDSParteI+Dopazo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyNUcHtUBPtahxF9PNbBRQc/",
+      "authorship_tag": "ABX9TyNVhxGEM9bYmlEGsCSdRxsj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,18 +90,26 @@
         "\n",
         "\n",
         "1 - Cuales son los generos de juegos que predominan las ventas por region?\n",
+        "\n",
         "---\n",
         "2 - Cuales son las consolas que predominan por cada genero de juego?\n",
+        "\n",
         "---\n",
         "3 - Cuales son los juegos mejor puntuados en promedio (critica + usuarios)\n",
+        "\n",
         "---\n",
         "4 - Cuales son los juegos mas vendidos?\n",
+        "\n",
         "---\n",
-        "5 - Los juegos mas vendidos, tienen alguna relacion con las puntuaciones promedio mas altas de los mismos?\n",
+        "5 - Los juegos mas vendidos, tienen alguna relacion con las puntuaciones\n",
+        "promedio mas altas de los mismos?\n",
+        "\n",
         "---\n",
         "6 - Cual es la region que tiene las mayores ventas de juegos?\n",
+        "\n",
         "---\n",
         "7 - Como evolucionaron las ventas de juegos en las diferentes regiones y en general?\n",
+        "\n",
         "---\n",
         "\n",
         "\n",
