--- a/ProyectoDSParteI+Dopazo.ipynb
+++ b/ProyectoDSParteI+Dopazo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyNVhxGEM9bYmlEGsCSdRxsj",
+      "authorship_tag": "ABX9TyMPV3zHCTwq9LEbaMaaQM+j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2414,7 +2414,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# VENTAS POR REGION 2000-2014"
+        "# GRAFICO DE VENTAS POR REGION 2000-2014"
       ],
       "metadata": {
         "id": "QF7x9xcCIcwL"
