--- a/ProyectoDSParteI+Dopazo.ipynb
+++ b/ProyectoDSParteI+Dopazo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyMPV3zHCTwq9LEbaMaaQM+j",
+      "authorship_tag": "ABX9TyMyX32SmR67kAUszLaC9gce",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,6 +118,26 @@
       ],
       "metadata": {
         "id": "bdfN864pr_gR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Objetivo del proyecto:**"
+      ],
+      "metadata": {
+        "id": "wvuPcBF5RZGV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El objetivo de este proyecto es poder predecir las ventas globales de un videojuego en función de características como su Género, Plataforma, Año de lanzamiento, Puntuación promedio (críticos + usuarios) y la Región de ventas (USA, Europa, Japón y Resto del mundo).\n",
+        "Tambien clasificar si un juego será un éxito o fracaso comercial.\n",
+        "Y un análisis de Tendencia Temporal con el objetivo de predecir ventas futuras o popularidad de géneros/plataformas a lo largo del tiempo."
+      ],
+      "metadata": {
+        "id": "EP0wZRQTRas7"
       }
     },
     {
