--- a/ProyectoDSParteI+Dopazo.ipynb
+++ b/ProyectoDSParteI+Dopazo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyPwAN4i9PrLjJ2FMhxmQCY3",
+      "authorship_tag": "ABX9TyPj7om+O2g0NpAuU9vsN+3B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4657,14 +4657,14 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "tLXVqRzSytPD",
-        "outputId": "1bca9d43-bf3e-457e-bf15-4567b447d241",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 807
-        }
+        },
+        "id": "tLXVqRzSytPD",
+        "outputId": "b7d795d7-c382-4c8c-b742-7dfd7cee248e"
       },
-      "execution_count": 47,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4709,12 +4709,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "UXHhWVdhy5-U",
-        "outputId": "3e640542-4b13-4697-ead5-cd2175e122ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 867
-        }
+        },
+        "id": "UXHhWVdhy5-U",
+        "outputId": "3e640542-4b13-4697-ead5-cd2175e122ac"
       },
       "execution_count": 41,
       "outputs": [
@@ -4798,7 +4798,7 @@
         "    if len(outliers) > 0:\n",
         "        print(f\"Valores outlier máximos: {outliers[columna].nlargest(3).values}\")\n",
         "\n",
-        "# 2. Visualización simple de outliers\n",
+        "# 2. Visualización de outliers\n",
         "plt.figure(figsize=(15, 10))\n",
         "\n",
         "for i, columna in enumerate(columnas_interes[:4], 1):\n",
@@ -4897,12 +4897,12 @@
         "        print(top_outliers.to_string(index=False))"
       ],
       "metadata": {
-        "id": "utGR6xmjxT2Y",
-        "outputId": "92204120-e0ec-4265-93f0-8733b778ab98",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "utGR6xmjxT2Y",
+        "outputId": "92204120-e0ec-4265-93f0-8733b778ab98"
       },
       "execution_count": 48,
       "outputs": [
@@ -5079,6 +5079,41 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Outliers en Ventas Totales:\n",
+        "\n",
+        "- Juegos extremadamente exitosos: Existen títulos que superan significativamente las ventas promedio\n",
+        "\n",
+        "- Impacto desproporcionado: Un pequeño número de juegos representa una gran parte de las ventas totales\n",
+        "\n",
+        "- Posibles \"blockbusters\": Estos outliers probablemente son franquicias icónicas o lanzamientos excepcionales\\\n",
+        "\n",
+        "---\n",
+        "\n",
+        "2. Distribución Geográfica de Outliers:\n",
+        "\n",
+        "- Patrones regionales: Algunos juegos son outliers en regiones específicas pero no globalmente\n",
+        "\n",
+        "- Preferencias culturales: Los outliers en \"Ventas Japón\" pueden reflejar preferencias culturales distintas\n",
+        "\n",
+        "- Mercados dominantes: Probablemente más outliers en USA/Europa por ser mercados más grandes\n",
+        "\n",
+        "---\n",
+        "\n",
+        "3. Outliers en Puntuaciones:\n",
+        "\n",
+        "- Juegos críticamente aclamados: Algunos títulos tienen puntuaciones excepcionalmente altas\n",
+        "\n",
+        "- Discrepancia críticos-usuarios: Posibles diferencias entre la puntuacion de los críticos y la de los usuarios en la consideracion de juegos \"excelentes\"\n",
+        "\n",
+        "- Cult classics: Juegos con baja venta pero alta puntuación de usuarios"
+      ],
+      "metadata": {
+        "id": "mrd6meKBg90o"
+      }
     }
   ]
 }
