--- a/ProyectoDSParteI+Dopazo.ipynb
+++ b/ProyectoDSParteI+Dopazo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyPj7om+O2g0NpAuU9vsN+3B",
+      "authorship_tag": "ABX9TyNuRpfe1/B9mE8kJR0Xpdaj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "BA5wxy4fm_5b"
       },
@@ -1805,13 +1805,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "4hQJTH3TFMso",
         "outputId": "1c960ede-831e-4a6c-f977-c5ac74560721"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1933,13 +1932,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "KQjGye-9zctN",
         "outputId": "0e9f25b5-718d-4068-8e8e-f03176485786"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2284,7 +2282,7 @@
         "id": "PKU0gQ_jBdCU",
         "outputId": "289b00b0-a049-40af-928d-33fc11cd14af"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2404,13 +2402,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "C7WIYjbPm6Fw",
         "outputId": "6172e0bd-758e-4825-ca31-2c4e0c62a41c"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3956,87 +3953,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "# fig, ax = plt.subplots(5,1,figsize=(16,9))\n",
-        "# fig.suptitle('VENTAS POR REGION (2000-2004)',fontsize=16, fontweight='bold')\n",
-        "\n",
-        "# max_ventas = df_promedio_ventas_1[['Ventas USA']].max().max()\n",
-        "# promedio_ventas = df_promedio_ventas_1[['Ventas USA']].mean().mean()\n",
-        "\n",
-        "# ax[0].plot(df_promedio_ventas_1['Ventas USA'], label='Ventas', color ='red', linestyle = '-')\n",
-        "# ax[0].axhline(y=promedio_ventas, label=f'Promedio: {promedio_ventas:.2f}M',color='blue', linestyle='--', alpha=1)\n",
-        "# ax[0].axhline(y=max_ventas, label=f'Maximo: {max_ventas:.2f}M',color='purple', linestyle='--', alpha=1)\n",
-        "\n",
-        "\n",
-        "# ax[0].set_ylim(0,200)\n",
-        "# ax[0].grid(alpha=0.9)\n",
-        "# ax[0].legend()\n",
-        "# ax[0].set_title('Ventas USA',fontweight='bold')\n",
-        "\n",
-        "\n",
-        "# promedio_ventas = df_promedio_ventas_1[['Ventas Europa']].mean().mean()\n",
-        "# max_ventas = df_promedio_ventas_1[['Ventas Europa']].max().max()\n",
-        "\n",
-        "# ax[1].plot(df_promedio_ventas_1['Ventas Europa'], label='Ventas', color ='orange', linestyle = '-')\n",
-        "# ax[1].axhline(y=promedio_ventas, label=f'Promedio: {promedio_ventas:.2f}M',color='black', linestyle='--', alpha=0.8)\n",
-        "# ax[1].axhline(y=max_ventas, label=f'Maximo: {max_ventas:.2f}M',color='purple', linestyle='--', alpha=1)\n",
-        "\n",
-        "# ax[1].set_ylabel('Ventas en millones', fontweight='bold')\n",
-        "# ax[1].set_ylim(0,100)\n",
-        "# ax[1].grid(alpha=0.9)\n",
-        "# ax[1].legend()\n",
-        "# ax[1].set_title('Ventas Europa',fontweight='bold')\n",
-        "\n",
-        "# promedio_ventas = df_promedio_ventas_1[['Ventas Japon']].mean().mean()\n",
-        "# max_ventas = df_promedio_ventas_1[['Ventas Japon']].max().max()\n",
-        "\n",
-        "# ax[2].plot(df_promedio_ventas_1['Ventas Japon'], label='Ventas', color ='green', linestyle = '-')\n",
-        "# ax[2].axhline(y=promedio_ventas, label=f'Promedio: {promedio_ventas:.2f}M',color='blue', linestyle='--', alpha=0.8)\n",
-        "# ax[2].axhline(y=max_ventas, label=f'Maximo: {max_ventas:.2f}M',color='purple', linestyle='--', alpha=1)\n",
-        "\n",
-        "# ax[2].set_ylim(0,30)\n",
-        "# ax[2].grid(alpha=0.9)\n",
-        "# ax[2].legend()\n",
-        "# ax[2].set_title('Ventas Japon',fontweight='bold')\n",
-        "\n",
-        "# promedio_ventas = df_promedio_ventas_1[['Ventas resto del Mundo']].mean().mean()\n",
-        "# max_ventas = df_promedio_ventas_1[['Ventas resto del Mundo']].max().max()\n",
-        "\n",
-        "# ax[3].plot(df_promedio_ventas_1['Ventas resto del Mundo'], label='Ventas', color ='green', linestyle = '-')\n",
-        "# ax[3].axhline(y=promedio_ventas, label=f'Promedio: {promedio_ventas:.2f}M',color='blue', linestyle='--', alpha=0.8)\n",
-        "# ax[3].axhline(y=max_ventas, label=f'Maximo: {max_ventas:.2f}M',color='purple', linestyle='--', alpha=1)\n",
-        "\n",
-        "# ax[3].set_ylim(0,50)\n",
-        "# ax[3].grid(alpha=0.9)\n",
-        "# ax[3].legend()\n",
-        "# ax[3].set_title('Ventas resto del Mundo',fontweight='bold')\n",
-        "\n",
-        "# promedio_ventas = df_promedio_ventas_1[['Ventas Totales']].mean().mean()\n",
-        "# max_ventas = df_promedio_ventas_1[['Ventas Totales']].max().max()\n",
-        "\n",
-        "# ax[4].plot(df_promedio_ventas_1['Ventas Totales'], label='Ventas', color ='green', linestyle = '-')\n",
-        "# ax[4].axhline(y=promedio_ventas, label=f'Promedio: {promedio_ventas:.2f}M',color='blue', linestyle='--', alpha=0.8)\n",
-        "# ax[4].axhline(y=max_ventas, label=f'Maximo: {max_ventas:.2f}M',color='purple', linestyle='--', alpha=1)\n",
-        "\n",
-        "# ax[4].set_xlabel('Año', fontweight='bold')\n",
-        "# ax[4].set_ylim(0,500)\n",
-        "# ax[4].grid(alpha=0.9)\n",
-        "# ax[4].legend()\n",
-        "# ax[4].set_title('Ventas Totales',fontweight='bold')\n",
-        "\n",
-        "\n",
-        "# plt.subplots_adjust(hspace=0.4)\n",
-        "# plt.tight_layout(rect=[0, 0, 1, 0.96])\n",
-        "# plt.show()"
-      ],
-      "metadata": {
-        "id": "XotrNvDN_mb-"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# EVOLUCION DE VENTAS DE JUEGOS, DIVIDIDO EN 3 PERIODOS ENTRE 2000-2014"
@@ -4197,87 +4113,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# fig, ax = plt.subplots(5,1,figsize=(16,9))\n",
-        "# fig.suptitle('VENTAS POR REGION (2005-2009)',fontsize=16, fontweight='bold')\n",
-        "\n",
-        "# max_ventas = df_promedio_ventas_2[['Ventas USA']].max().max()\n",
-        "# promedio_ventas = df_promedio_ventas_2[['Ventas USA']].mean().mean()\n",
-        "\n",
-        "# ax[0].plot(df_promedio_ventas_2['Ventas USA'], label='Ventas', color ='red', linestyle = '-')\n",
-        "# ax[0].axhline(y=promedio_ventas, label=f'Promedio: {promedio_ventas:.2f}M',color='blue', linestyle='--', alpha=1)\n",
-        "# ax[0].axhline(y=max_ventas, label=f'Maximo: {max_ventas:.2f}M',color='purple', linestyle='--', alpha=1)\n",
-        "\n",
-        "\n",
-        "# ax[0].set_ylim(0,400)\n",
-        "# ax[0].grid(alpha=0.9)\n",
-        "# ax[0].legend()\n",
-        "# ax[0].set_title('Ventas USA',fontweight='bold')\n",
-        "\n",
-        "\n",
-        "# promedio_ventas = df_promedio_ventas_2[['Ventas Europa']].mean().mean()\n",
-        "# max_ventas = df_promedio_ventas_2[['Ventas Europa']].max().max()\n",
-        "\n",
-        "# ax[1].plot(df_promedio_ventas_2['Ventas Europa'], label='Ventas', color ='orange', linestyle = '-')\n",
-        "# ax[1].axhline(y=promedio_ventas, label=f'Promedio: {promedio_ventas:.2f}M',color='black', linestyle='--', alpha=0.8)\n",
-        "# ax[1].axhline(y=max_ventas, label=f'Maximo: {max_ventas:.2f}M',color='purple', linestyle='--', alpha=1)\n",
-        "\n",
-        "# ax[1].set_ylabel('Ventas en millones', fontweight='bold')\n",
-        "# ax[1].set_ylim(0,200)\n",
-        "# ax[1].grid(alpha=0.9)\n",
-        "# ax[1].legend()\n",
-        "# ax[1].set_title('Ventas Europa',fontweight='bold')\n",
-        "\n",
-        "# promedio_ventas = df_promedio_ventas_2[['Ventas Japon']].mean().mean()\n",
-        "# max_ventas = df_promedio_ventas_2[['Ventas Japon']].max().max()\n",
-        "\n",
-        "# ax[2].plot(df_promedio_ventas_2['Ventas Japon'], label='Ventas', color ='green', linestyle = '-')\n",
-        "# ax[2].axhline(y=promedio_ventas, label=f'Promedio: {promedio_ventas:.2f}M',color='blue', linestyle='--', alpha=0.8)\n",
-        "# ax[2].axhline(y=max_ventas, label=f'Maximo: {max_ventas:.2f}M',color='purple', linestyle='--', alpha=1)\n",
-        "\n",
-        "# ax[2].set_ylim(0,60)\n",
-        "# ax[2].grid(alpha=0.9)\n",
-        "# ax[2].legend()\n",
-        "# ax[2].set_title('Ventas Japon',fontweight='bold')\n",
-        "\n",
-        "# promedio_ventas = df_promedio_ventas_2[['Ventas resto del Mundo']].mean().mean()\n",
-        "# max_ventas = df_promedio_ventas_2[['Ventas resto del Mundo']].max().max()\n",
-        "\n",
-        "# ax[3].plot(df_promedio_ventas_2['Ventas resto del Mundo'], label='Ventas', color ='green', linestyle = '-')\n",
-        "# ax[3].axhline(y=promedio_ventas, label=f'Promedio: {promedio_ventas:.2f}M',color='blue', linestyle='--', alpha=0.8)\n",
-        "# ax[3].axhline(y=max_ventas, label=f'Maximo: {max_ventas:.2f}M',color='purple', linestyle='--', alpha=1)\n",
-        "\n",
-        "# ax[3].set_ylim(0,100)\n",
-        "# ax[3].grid(alpha=0.9)\n",
-        "# ax[3].legend()\n",
-        "# ax[3].set_title('Ventas resto del Mundo',fontweight='bold')\n",
-        "\n",
-        "# promedio_ventas = df_promedio_ventas_2[['Ventas Totales']].mean().mean()\n",
-        "# max_ventas = df_promedio_ventas_2[['Ventas Totales']].max().max()\n",
-        "\n",
-        "# ax[4].plot(df_promedio_ventas_2['Ventas Totales'], label='Ventas', color ='green', linestyle = '-')\n",
-        "# ax[4].axhline(y=promedio_ventas, label=f'Promedio: {promedio_ventas:.2f}M',color='blue', linestyle='--', alpha=0.8)\n",
-        "# ax[4].axhline(y=max_ventas, label=f'Maximo: {max_ventas:.2f}M',color='purple', linestyle='--', alpha=1)\n",
-        "\n",
-        "# ax[4].set_xlabel('Año', fontweight='bold')\n",
-        "# ax[4].set_ylim(0,600)\n",
-        "# ax[4].grid(alpha=0.9)\n",
-        "# ax[4].legend()\n",
-        "# ax[4].set_title('Ventas Totales',fontweight='bold')\n",
-        "\n",
-        "\n",
-        "# plt.subplots_adjust(hspace=0.4)\n",
-        "# plt.tight_layout(rect=[0, 0, 1, 0.96])\n",
-        "# plt.show()"
-      ],
-      "metadata": {
-        "id": "xJTSpypW1tL1"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4571,7 +4406,8 @@
           "height": 1000
         },
         "id": "GZSVV6FD-lFQ",
-        "outputId": "8fa874fd-5ab5-41fd-a475-e6fc9ef351eb"
+        "outputId": "8fa874fd-5ab5-41fd-a475-e6fc9ef351eb",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
@@ -4586,24 +4422,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Conclusiones Preliminares"
-      ],
-      "metadata": {
-        "id": "_BkDwPpg5EOG"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Las conclusiones que puedo realizar hasta ahora despues de haber"
-      ],
-      "metadata": {
-        "id": "gAr6FV-9S9he"
-      }
     },
     {
       "cell_type": "markdown",
@@ -4664,7 +4482,7 @@
         "id": "tLXVqRzSytPD",
         "outputId": "b7d795d7-c382-4c8c-b742-7dfd7cee248e"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4716,7 +4534,7 @@
         "id": "UXHhWVdhy5-U",
         "outputId": "3e640542-4b13-4697-ead5-cd2175e122ac"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4904,7 +4722,7 @@
         "id": "utGR6xmjxT2Y",
         "outputId": "92204120-e0ec-4265-93f0-8733b778ab98"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5113,6 +4931,104 @@
       ],
       "metadata": {
         "id": "mrd6meKBg90o"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Conclusiones a las preguntas de interes (Basado en el Análisis Gráfico)"
+      ],
+      "metadata": {
+        "id": "tk0hEhTP_IOe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. ¿Cuáles son los géneros de juegos que predominan las ventas por región?\n",
+        "\n",
+        "- El género Acción es el dominante en ventas en casi todas las regiones (USA, Europa, Resto del Mundo), lo que demuestra su popularidad global. Sin embargo, Japón se distingue por tener al género RPG como líder absoluto, representando casi la mitad (48.1%) de las ventas totales en esa región. Los géneros Deportes y Disparos son consistentes en el Top 3 de la mayoría de las regiones."
+      ],
+      "metadata": {
+        "id": "tfs7BY8g_FEL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. ¿Cuáles son las consolas que predominan por cada género de juego?\n",
+        "- La plataforma dominante varía significativamente según el género:\n",
+        "\n",
+        "- El PS2 (PlayStation 2) demuestra ser la plataforma líder en los géneros de Acción y Deportes.\n",
+        "\n",
+        "- El género de Disparos (Shooter) está dominado por la X360 (Xbox 360) y la PS3 (PlayStation 3).\n",
+        "\n",
+        "- La DS (Nintendo DS) es la líder indiscutible en el género de RPG."
+      ],
+      "metadata": {
+        "id": "c-UDxu42_K9a"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. ¿Cuáles son los juegos mejor puntuados en promedio (crítica + usuarios)?\n",
+        "- Los juegos mejor puntuados, con un alto volumen de críticas, son títulos de grandes franquicias que lograron un amplio consenso positivo tanto de la crítica como de los usuarios.\n",
+        "\n",
+        "- El juego con el puntaje promedio más alto (95.00) es GRAND THEFT AUTO V (PS3).\n",
+        "\n",
+        "- Otros títulos destacados incluyen THE LEGEND OF ZELDA: OCARINA OF TIME (94.50) y THE LAST OF US (92.50)."
+      ],
+      "metadata": {
+        "id": "TtnkFT5O_Vx2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. ¿Cuáles son los juegos más vendidos?\n",
+        "- El juego más vendido globalmente es WII SPORTS (Wii), con 82.53 millones de unidades, superando con creces al segundo lugar. Esto se debe probablemente a que fue un juego incluido en el paquete de la consola. La franquicia GRAND THEFT AUTO V también demuestra un éxito masivo, apareciendo en los primeros puestos para múltiples plataformas (PS3 y X360)."
+      ],
+      "metadata": {
+        "id": "o8hJuT_5_ZA0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5. Los juegos más vendidos, ¿tienen alguna relación con las puntuaciones promedio más altas de los mismos?\n",
+        "Conclusión: Existe una fuerte relación entre altos puntajes promedio y altas ventas, pero no es una correlación absoluta.\n",
+        "\n",
+        "- Juegos como GRAND THEFT AUTO V (PS3) combinan ventas excepcionales (Puesto 2) con un puntaje máximo (95.00).\n",
+        "\n",
+        "- Sin embargo, el juego más vendido, WII SPORTS (Wii), tiene un puntaje promedio bueno pero no excepcional (78.00), lo que sugiere que su récord de ventas fue impulsado por factores externos (como ser parte de un bundle de consola) más que por su aclamación crítica/usuario."
+      ],
+      "metadata": {
+        "id": "NZHDiuRt_hkQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6. ¿Cuál es la región que tiene las mayores ventas de juegos?\n",
+        "-  La región de Ventas USA es el mercado dominante, aportando casi la mitad de las ventas totales (46.0%). Ventas Europa es el segundo mercado más grande, con un 28.6% del total."
+      ],
+      "metadata": {
+        "id": "M_Vo3wds_piN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7. ¿Cómo evolucionaron las ventas de juegos en las diferentes regiones y en general?\n",
+        "- El análisis de la evolución de las ventas muestra un crecimiento global positivo durante los periodos analizados (ej. +4.9% en el periodo 2005-2009).\n",
+        "\n",
+        "- Europa y el Resto del Mundo mostraron un crecimiento porcentual robusto (ej. +11.8% y +20.4% en 2005-2009, respectivamente), indicando que eran mercados en expansión.\n",
+        "\n",
+        "- Japón experimentó una contracción significativa de sus ventas en ciertos periodos (ej. -30.8% en 2005-2009), lo que sugiere una caída en la demanda en ese mercado o un cambio de tendencia."
+      ],
+      "metadata": {
+        "id": "sRREKK1W_sjS"
       }
     }
   ]
