--- a/ProyectoDSParteI+Dopazo.ipynb
+++ b/ProyectoDSParteI+Dopazo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyNuRpfe1/B9mE8kJR0Xpdaj",
+      "authorship_tag": "ABX9TyO1Dv+LTjwlTjfpwLN6E1l6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4997,7 +4997,7 @@
       "cell_type": "markdown",
       "source": [
         "5. Los juegos más vendidos, ¿tienen alguna relación con las puntuaciones promedio más altas de los mismos?\n",
-        "Conclusión: Existe una fuerte relación entre altos puntajes promedio y altas ventas, pero no es una correlación absoluta.\n",
+        "-  Existe una fuerte relación entre altos puntajes promedio y altas ventas, pero no es una correlación absoluta.\n",
         "\n",
         "- Juegos como GRAND THEFT AUTO V (PS3) combinan ventas excepcionales (Puesto 2) con un puntaje máximo (95.00).\n",
         "\n",
