--- a/ProyectoDSParteI+Dopazo.ipynb
+++ b/ProyectoDSParteI+Dopazo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyO1Dv+LTjwlTjfpwLN6E1l6",
+      "authorship_tag": "ABX9TyMqZ/pTgKXG/397L7Jkkqgz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,17 +57,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "***En este proyecto trabajamos con el dataset Video_games.csv que contiene información sobre los videojuegos, sus ventas por region, el puntaje segun criticos y usuarios, los publicadores y los desarrolladores de estos mismos.***\n",
         "\n",
-        "***El objetivo principal es aplicar técnicas de visualización y análisis exploratorio de datos para identificar patrones relevantes, relaciones entre variables y posibles anomalías o factores que influyen en los video juegos. A través de gráficos univariados, bivariados y multivariados, se buscará responder una serie de preguntas o hipótesis planteadas sobre el comportamiento de los datos.***\n",
+        "## Contexto\n",
+        "El éxito comercial en la industria del videojuego es un fenómeno complejo determinado por la interacción de variables de calidad, diseño de producto y dinámicas de mercado. Se utiliza el dataset **Video\\_games.csv**, que contiene información sobre **ventas por región**, **puntajes de críticos y usuarios**, **géneros**, y **plataformas** de lanzamiento.\n",
         "\n",
-        "***El análisis incluye una limpieza previa de datos, identificación de valores perdidos, y selección de variables relevantes. Luego se desarrollan visualizaciones que permiten explorar tendencias, distribuciones y correlaciones. A partir de estos resultados visuales y numéricos se busca brindar una interpretación que permita entender mejor el fenómeno analizado.***\n",
+        "## Objetivo\n",
+        "El objetivo principal de esta etapa (Parte I del proyecto) es aplicar técnicas de visualización y Análisis Exploratorio de Datos (EDA)** para **identificar patrones, relaciones y factores influyentes que justifiquen la selección de variables predictoras. A través de gráficos y análisis numéricos, se busca responder hipótesis clave sobre el comportamiento de los datos.\n",
         "\n",
-        "***El proyecto se estructura en etapas: definición de preguntas, diagnóstico visual, interpretación, y preparación para análisis posteriores como modelado o segmentación.***\n",
+        "## Metodología y Foco del Análisis\n",
+        "El análisis inicia con una **limpieza y diagnóstico de datos**, incluyendo la gestión de valores perdidos y la creación de la variable **\"Puntaje Promedio\"**. Posteriormente, se desarrollan visualizaciones que exploran tres factores determinantes, que serán las *features* del modelo predictivo:\n",
         "\n",
-        "\n",
-        "\n",
-        "\n"
+        "1.  **Ventas y Preferencias Regionales:** Analizar la distribución de ventas por **Género** y **Región** (USA, Europa, Japón).\n",
+        "2.  **Sinergia Estratégica:** Identificar la **plataforma (Consola)** dominante dentro de cada **género**.\n",
+        "3.  **Impacto de la Calidad:** Cuantificar la correlación entre el **Puntaje Promedio** y las **Ventas Totales**."
       ],
       "metadata": {
         "id": "qpqGFeGO25sV"
@@ -4931,6 +4933,25 @@
       ],
       "metadata": {
         "id": "mrd6meKBg90o"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Conclusión y Justificación Metodológica"
+      ],
+      "metadata": {
+        "id": "QP4-H88HWtVx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "A partir de los resultados visuales y numéricos, se establece una interpretación clara que permite **seleccionar y justificar** las variables **Género, Consola, Puntaje Promedio y Año de Lanzamiento** como los predictores fundamentales para el desarrollo de un **motor predictivo de Machine Learning** del éxito comercial en la siguiente fase del proyecto."
+      ],
+      "metadata": {
+        "id": "s-K7eOYgWq4a"
       }
     },
     {
